--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
     hight: 100%;
     
     /*background-image: linear-gradient(#b04aee, #8239fa);*/
-    background-image: url('../images/stars.jpeg');
+    background-image: url("../images/stars.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
