--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
     margin: 0;
     hight: 100%;
     
+    background-color: #696969;
     /*background-image: linear-gradient(#b04aee, #8239fa);*/
     background-image: url("../images/stars.jpeg");
     background-repeat: no-repeat;
