--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
     
     background-color: #696969;
     /*background-image: linear-gradient(#b04aee, #8239fa);*/
-    background-image: url("../images/stars.jpeg");
+    background-image: url('images/stars.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
