--- a/defly.css
+++ b/defly.css
@@ -9,7 +9,7 @@ html {
     margin: 0;
     hight: 100%;
     
-    background-image: url('images/stars-defly.jpeg');
+    background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
