--- a/defly.css
+++ b/defly.css
@@ -14,7 +14,7 @@ html {
     margin: 0;
     height: 100%;
     
-    background-image: url('start.jpg');
+    background-image: url('stars.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: relative;
